; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/driver/extr_spi.c_spi_byte_write_espslave.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/driver/extr_spi.c_spi_byte_write_espslave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPI_USR = common dso_local global i32 0, align 4
@SPI_USR_MOSI = common dso_local global i32 0, align 4
@SPI_USR_MISO = common dso_local global i32 0, align 4
@SPI_USR_ADDR = common dso_local global i32 0, align 4
@SPI_USR_DUMMY = common dso_local global i32 0, align 4
@SPI_USR_COMMAND_BITLEN = common dso_local global i32 0, align 4
@SPI_USR_COMMAND_BITLEN_S = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spi_byte_write_espslave(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp sgt i32 %6, 1
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %47

9:                                                ; preds = %2
  br label %10

10:                                               ; preds = %17, %9
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @SPI_CMD(i32 %11)
  %13 = call i32 @READ_PERI_REG(i32 %12)
  %14 = load i32, i32* @SPI_USR, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  br label %10

18:                                               ; preds = %10
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @SPI_USER(i32 %19)
  %21 = load i32, i32* @SPI_USR_MOSI, align 4
  %22 = call i32 @SET_PERI_REG_MASK(i32 %20, i32 %21)
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @SPI_USER(i32 %23)
  %25 = load i32, i32* @SPI_USR_MISO, align 4
  %26 = load i32, i32* @SPI_USR_ADDR, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @SPI_USR_DUMMY, align 4
  %29 = or i32 %27, %28
  %30 = call i32 @CLEAR_PERI_REG_MASK(i32 %24, i32 %29)
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @SPI_USER2(i32 %31)
  %33 = load i32, i32* @SPI_USR_COMMAND_BITLEN, align 4
  %34 = and i32 7, %33
  %35 = load i32, i32* @SPI_USR_COMMAND_BITLEN_S, align 4
  %36 = shl i32 %34, %35
  %37 = or i32 %36, 4
  %38 = call i32 @WRITE_PERI_REG(i32 %32, i32 %37)
  %39 = load i32, i32* %3, align 4
  %40 = call i32 @SPI_W0(i32 %39)
  %41 = load i32, i32* %4, align 4
  %42 = call i32 @WRITE_PERI_REG(i32 %40, i32 %41)
  %43 = load i32, i32* %3, align 4
  %44 = call i32 @SPI_CMD(i32 %43)
  %45 = load i32, i32* @SPI_USR, align 4
  %46 = call i32 @SET_PERI_REG_MASK(i32 %44, i32 %45)
  br label %47

47:                                               ; preds = %18, %8
  ret void
}

declare dso_local i32 @READ_PERI_REG(i32) #1

declare dso_local i32 @SPI_CMD(i32) #1

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @SPI_USER(i32) #1

declare dso_local i32 @CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @WRITE_PERI_REG(i32, i32) #1

declare dso_local i32 @SPI_USER2(i32) #1

declare dso_local i32 @SPI_W0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
